A Few Finishing Touches
For the captcha page, I combined both an image and a checkbox in one grid element to give the impression of selecting that image. I also made some UI changes, finalizing component sizes/colors. In addition, some documentation has been made.

--- a/hackathon-react-app-bjbhdg/public/manifest.json
+++ b/hackathon-react-app-bjbhdg/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Spectacularly Terrible Captchas",
-  "description": "A browser extension that randomly pops up intentionally bad 'captcha-like' tasks.",
-  "version": "0.1",
+  "description": "A browser extension that tasks players with intentionally-bad designed tasks.",
+  "version": "1.0",
   "manifest_version": 2,
   "homepage_url": "https://github.com/bjbhdg/2022PickHacksHackathon-SpectacularlyTerribleCaptchas",
   "browser_action": {
